--- a/Swift3/scratchy/scratchy/Info.plist
+++ b/Swift3/scratchy/scratchy/Info.plist
@@ -18,8 +18,17 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>DMCApp1</string>
+		<string>DMCApp2</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera Test</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Camera Test</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
