--- a/Swift3/scratchy/scratchy/Info.plist
+++ b/Swift3/scratchy/scratchy/Info.plist
@@ -32,7 +32,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Fourth</string>
+	<string>Third</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
